syntax = "proto3";

package tikvpb;

import "v1/tikv/kvrpcpb.proto";

option go_package = "github.com/vdaas/vald/apis/grpc/v1/tikv";

service Tikv {
  rpc RawGet(tikv.RawGetRequest) returns (tikv.RawGetResponse) {}
  rpc RawBatchGet(tikv.RawBatchGetRequest) returns (tikv.RawBatchGetResponse) {}
  rpc RawPut(tikv.RawPutRequest) returns (tikv.RawPutResponse) {}
  rpc RawBatchPut(tikv.RawBatchPutRequest) returns (tikv.RawBatchPutResponse) {}
  rpc RawDelete(tikv.RawDeleteRequest) returns (tikv.RawDeleteResponse) {}
  rpc RawBatchDelete(tikv.RawBatchDeleteRequest) returns (tikv.RawBatchDeleteResponse) {}
}
